add loss function to graph edges

--- a/EXP3.ipynb
+++ b/EXP3.ipynb
@@ -30,7 +30,7 @@
     "        It = V[np.argmax(draw)]\n",
     "        \n",
     "        # observe\n",
-    "        loss = {action: loss_fun(action)/sum([p[t][pred] for pred in G.predecessors(action)]) for action in G.successors(It)}\n",
+    "        loss = {action: G.node[action]['loss']()/sum([p[t][pred] for pred in G.predecessors(action)]) for action in G.successors(It)}\n",
     "        \n",
     "        q[t+1] = np.array([q[t][i]*np.exp(-eta*loss[i]) if i in loss else q[t][i] for i in V])\n",
     "        q[t+1] = 1/(sum(q[t+1]))*q[t+1]\n",
@@ -44,8 +44,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def loss_fun():\n",
+    "    return 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "G = nx.DiGraph()\n",
-    "G.add_nodes_from([0, 1])\n",
+    "G.add_nodes_from([0, 1], loss=loss_fun)\n",
     "G.add_edge(0,0)\n",
     "G.add_edge(0,1)"
    ]
@@ -56,8 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def loss_fun(u):\n",
-    "    return 1"
+    "EXP3(G, list(G.nodes()), 0.5, 0.5, 100)"
    ]
   },
   {
@@ -66,8 +75,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EXP3(G, list(G.nodes()), 0.5, 0.5, 100)"
+    "import matplotlib.pyplot as plt\n",
+    "nx.draw(G)  # networkx draw()\n",
+    "plt.draw()\n",
+    "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
