separate EXP3 algorithm and draw regret

--- a/EXP3.ipynb
+++ b/EXP3.ipynb
@@ -7,6 +7,8 @@
    "outputs": [],
    "source": [
     "import networkx as nx\n",
+    "from EXP3 import EXP3\n",
+    "import arms\n",
     "import numpy as np"
    ]
   },
@@ -16,57 +18,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#nodes of G [0 1 2 ...], [0 2 3] is forbidden\n",
-    "\n",
-    "def EXP3(G, U, eta, gamma, T):\n",
-    "    V = list(G.nodes())\n",
-    "    t = 0\n",
-    "    u = np.array([0 if not n in U else 1/len(U) for n in V])\n",
-    "    q = (1/len(V))*np.ones((T+1, len(V)))\n",
-    "    p = np.zeros((T, len(V)))\n",
-    "    while t < T:\n",
-    "        p[t] = (1-gamma)*q[t]+gamma*u\n",
-    "        draw = np.random.multinomial(1, p[t])\n",
-    "        It = V[np.argmax(draw)]\n",
-    "        \n",
-    "        # observe\n",
-    "        loss = {action: G.node[action]['loss']()/sum([p[t][pred] for pred in G.predecessors(action)]) for action in G.successors(It)}\n",
-    "        \n",
-    "        q[t+1] = np.array([q[t][i]*np.exp(-eta*loss[i]) if i in loss else q[t][i] for i in V])\n",
-    "        q[t+1] = 1/(sum(q[t+1]))*q[t+1]\n",
-    "        t+=1\n",
-    "    return q[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def loss_fun():\n",
-    "    return 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "G = nx.DiGraph()\n",
-    "G.add_nodes_from([0, 1], loss=loss_fun)\n",
+    "G.add_node(0, arm=arms.ArmBernoulli(0.5))\n",
+    "G.add_node(1, arm=arms.ArmBernoulli(0.3))\n",
+    "G.add_node(2, arm=arms.ArmBernoulli(0.4))\n",
+    "G.add_node(3, arm=arms.ArmBernoulli(0.7))\n",
     "G.add_edge(0,0)\n",
-    "G.add_edge(0,1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "EXP3(G, list(G.nodes()), 0.5, 0.5, 100)"
+    "G.add_edge(0,1)\n",
+    "G.add_edge(2,2)\n",
+    "G.add_edge(3,3)\n",
+    "\n",
+    "G = nx.convert_node_labels_to_integers(G)"
    ]
   },
   {
@@ -78,6 +40,43 @@
     "import matplotlib.pyplot as plt\n",
     "nx.draw(G)  # networkx draw()\n",
     "plt.draw()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_itr = 10000\n",
+    "q,losses = EXP3(G, list(G.nodes()), 0.5, 0.05, n_itr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regret = np.zeros((n_itr,))\n",
+    "best_arm_mean = np.min([-G.node[node]['arm'].mean for node in G.nodes()]) \n",
+    "regret = np.cumsum(losses)-best_arm_mean*np.arange(1, n_itr + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(1)\n",
+    "x = np.arange(1, n_itr+1)\n",
+    "plt.plot(x, regret, label='EXP3')\n",
+    "plt.xlabel('Rounds')\n",
+    "plt.ylabel('Cumulative Regret')\n",
+    "plt.legend()\n",
+    "#plt.savefig('Q1_2')\n",
     "plt.show()"
    ]
   },
