add EXP3 and obsGraph functions and fix strong graph generator
add plot regret function
add compute regret function
add observability graph type function

TODO:
  implement EXP3 upper_bound and lower_bound functions

--- a/EXP3.ipynb
+++ b/EXP3.ipynb
@@ -7,9 +7,10 @@
    "outputs": [],
    "source": [
     "import networkx as nx\n",
-    "from EXP3 import EXP3\n",
+    "from EXP3 import EXP3, compute_regret, plot_regret\n",
     "import arms\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import obsGraph"
    ]
   },
   {
@@ -59,9 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regret = np.zeros((n_itr,))\n",
-    "best_arm_mean = np.min([-G.node[node]['arm'].mean for node in G.nodes()]) \n",
-    "regret = np.cumsum(losses)-best_arm_mean*np.arange(1, n_itr + 1)"
+    "regret = compute_regret(losses, G)"
    ]
   },
   {
@@ -70,14 +69,155 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(1)\n",
-    "x = np.arange(1, n_itr+1)\n",
-    "plt.plot(x, regret, label='EXP3')\n",
-    "plt.xlabel('Rounds')\n",
-    "plt.ylabel('Cumulative Regret')\n",
-    "plt.legend()\n",
-    "#plt.savefig('Q1_2')\n",
+    "plot_regret([regret], ['EXP3'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha = 1/2\n",
+    "beta = 1/2\n",
+    "n_nodes = 20\n",
+    "H = obsGraph.strong_obs_graph(n_nodes, alpha, beta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.draw(H)  # networkx draw()\n",
+    "plt.draw()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obsGraph.observability_type(H)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obsGraph.strong_nodes(H)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Examples\n",
+    "## Strongly observable\n",
+    "### Bandit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Full feeback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Weakly observabnle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Revealing actions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Police officer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Instability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Strongly to weakly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Strongly to unobservable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Weakly to unobservable"
    ]
   },
   {
