--- a/EXP3.ipynb
+++ b/EXP3.ipynb
@@ -127,13 +127,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "### Full feeback"
+    "bandit = nx.DiGraph()\n",
+    "bandit.add_node(0, arm=arms.ArmBernoulli(0.5))\n",
+    "bandit.add_node(1, arm=arms.ArmBernoulli(0.3))\n",
+    "bandit.add_node(2, arm=arms.ArmBernoulli(0.4))\n",
+    "bandit.add_node(3, arm=arms.ArmBernoulli(0.7))\n",
+    "bandit.add_node(4, arm=arms.ArmBernoulli(0.1))\n",
+    "bandit.add_edge(0,0)\n",
+    "bandit.add_edge(1,1)\n",
+    "bandit.add_edge(2,2)\n",
+    "bandit.add_edge(3,3)\n",
+    "bandit.add_edge(4,4)\n",
+    "print(obsGraph.observability_type(bandit))"
    ]
   },
   {
@@ -141,7 +147,168 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nx.draw(bandit)  # networkx draw()\n",
+    "plt.draw()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_itr = 10000\n",
+    "bandit_q, bandit_losses = EXP3(bandit, list(bandit.nodes()), 0.5, 0.05, n_itr)\n",
+    "bandit_regret = compute_regret(bandit_losses, bandit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_regret([bandit_regret], ['EXP3'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bandit_q"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "independent set np hard\n",
+    "https://networkx.github.io/documentation/networkx-1.10/reference/algorithms.approximation.html?highlight=independent%20set#module-networkx.algorithms.approximation.independent_set\n",
+    "\n",
+    "how to compute weak domination number?\n",
+    "\n",
+    "regret doit être une esperance: il faut lancer plusieurs fois et faire la moyenne"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Full feedback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_arms = [arms.ArmBernoulli(0.5), arms.ArmBernoulli(0.3), arms.ArmBernoulli(0.4), arms.ArmBernoulli(0.7), arms.ArmBernoulli(0.1)]\n",
+    "full_feedback = obsGraph.strong_obs_graph(5, 0, 0, graph_arms)\n",
+    "print(obsGraph.observability_type(full_feedback))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.draw(full_feedback)  # networkx draw()\n",
+    "plt.draw()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_itr = 10000\n",
+    "full_feedback_q, full_feedback_losses = EXP3(full_feedback, list(full_feedback.nodes()), 0.5, 0.05, n_itr)\n",
+    "full_feedback_regret = compute_regret(full_feedback_losses, full_feedback)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_regret([full_feedback_regret], ['EXP3'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_regret([full_feedback_regret, bandit_regret], ['Full feedback', 'Bandit'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Police officer - loopless clique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_arms = [arms.ArmBernoulli(0.5), arms.ArmBernoulli(0.3), arms.ArmBernoulli(0.4), arms.ArmBernoulli(0.7), arms.ArmBernoulli(0.1)]\n",
+    "police = obsGraph.strong_obs_graph(5, 1, 0, graph_arms)\n",
+    "print(obsGraph.observability_type(police))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.draw(police)  # networkx draw()\n",
+    "plt.draw()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_itr = 10000\n",
+    "police_q, police_losses = EXP3(police, list(police.nodes()), 0.5, 0.05, n_itr)\n",
+    "police_regret = compute_regret(police_losses, police)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_regret([police_regret], ['EXP3'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_regret([full_feedback_regret, bandit_regret, police_regret], ['Full feedback', 'Bandit', 'Police'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,13 +329,66 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "revealing = nx.DiGraph()\n",
+    "revealing.add_node(0, arm=arms.ArmBernoulli(0.5))\n",
+    "revealing.add_node(1, arm=arms.ArmBernoulli(0.3))\n",
+    "revealing.add_node(2, arm=arms.ArmBernoulli(0.4))\n",
+    "revealing.add_node(3, arm=arms.ArmBernoulli(0.7))\n",
+    "revealing.add_node(4, arm=arms.ArmBernoulli(0.1))\n",
+    "revealing.add_edge(0,0)\n",
+    "revealing.add_edge(0,1)\n",
+    "revealing.add_edge(0,2)\n",
+    "revealing.add_edge(0,3)\n",
+    "revealing.add_edge(0,4)\n",
+    "print(obsGraph.observability_type(revealing))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.draw(revealing)  # networkx draw()\n",
+    "plt.draw()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_itr = 10000\n",
+    "revealing_q, revealing_losses = EXP3(revealing, list(revealing.nodes()), 0.5, 0.05, n_itr)\n",
+    "revealing_regret = compute_regret(revealing_losses, revealing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_regret([revealing_regret], ['EXP3'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_regret([full_feedback_regret, bandit_regret, police_regret, revealing_regret], ['Full feedback', 'Bandit', 'Police','Revealing'])"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Police officer"
+    "## Unobservable"
    ]
   },
   {
