Some comment on the notebook for the report

--- a/EXP3.ipynb
+++ b/EXP3.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Graphs in ML - Project Notebook\n",
+    "###### Valentin Berkes, Simon Lebastard\n",
+    "\n",
+    "In this notebook we will create several strongly and weakly connected graphs, test the Exp3G algorithm and assess the influence of a qualitative change in the connectivity graph on the evolution of regret."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -90,6 +100,13 @@
     "# 2) Run:\n",
     "write_dot(G,'graph.dot')\n",
     "# 3) In terminal, run: dot -Tpng graph.dot > graph.png"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will run the Exp3G algorithm 50 times and produce an average to have a smooth regret function. This will allow us to detect quasi-linear components and better identify the asymptotic regret."
    ]
   },
   {
