fix upper bound

--- a/EXP3.ipynb
+++ b/EXP3.ipynb
@@ -364,7 +364,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_regret(full_feedback, [full_feedback_regret, bandit_regret], ['Full feedback', 'Bandit'])"
+    "min_t = min(len(full_feedback_regret), len(bandit_regret))\n",
+    "plot_regret(full_feedback, [full_feedback_regret[:min_t], bandit_regret[:min_t]], ['Full feedback', 'Bandit'])"
    ]
   },
   {
