add cycle graph problem

--- a/EXP3.ipynb
+++ b/EXP3.ipynb
@@ -274,7 +274,7 @@
     "plt.show()\n",
     "# Note that networkx does not display self edges\n",
     "# Exporting the dot graph allows to see self-edges\n",
-    "write_dot(bandit,'Graphs/bandit.dot')"
+    "# write_dot(bandit,'Graphs/bandit.dot')"
    ]
   },
   {
@@ -283,8 +283,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_itr = 5000\n",
-    "n_sim = 50\n",
+    "n_itr = 10000\n",
+    "n_sim = 100\n",
     "bandit_q, bandit_losses = EXP3Opt(bandit, list(bandit.nodes()), n_itr, n_sim, alpha=bandit.number_of_nodes()-1)\n",
     "bandit_regret = compute_regret(bandit_losses, bandit)"
    ]
@@ -356,7 +356,7 @@
    "outputs": [],
    "source": [
     "n_itr = 10000\n",
-    "n_sim = 50\n",
+    "n_sim = 100\n",
     "full_feedback_q, full_feedback_losses = EXP3Opt(full_feedback, list(full_feedback.nodes()), n_itr, n_sim, alpha=1)\n",
     "full_feedback_regret = compute_regret(full_feedback_losses, full_feedback)"
    ]
@@ -407,7 +407,7 @@
     "nx.draw(police)  # networkx draw()\n",
     "plt.draw()\n",
     "plt.show()\n",
-    "write_dot(bandit,'Graphs/loopless_clique.dot')"
+    "#write_dot(bandit,'Graphs/loopless_clique.dot')"
    ]
   },
   {
@@ -416,8 +416,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_itr = 4000\n",
-    "n_sim= 50\n",
+    "n_itr = 10000\n",
+    "n_sim= 100\n",
     "police_q, police_losses = EXP3Opt(police, list(police.nodes()), n_itr, n_sim, alpha=1)\n",
     "police_regret = compute_regret(police_losses, police)"
    ]
@@ -438,7 +438,9 @@
    "outputs": [],
    "source": [
     "min_t = min(len(full_feedback_regret), min(len(bandit_regret),len(police_regret)))\n",
-    "plot_regret(police, [full_feedback_regret[:min_t], bandit_regret[:min_t], police_regret[:min_t]], ['Full feedback', 'Bandit', 'Police'])"
+    "plot_regret(police,\n",
+    "            [full_feedback_regret[:min_t], bandit_regret[:min_t], police_regret[:min_t]],\n",
+    "            ['Full feedback', 'Bandit', 'Police'])"
    ]
   },
   {
@@ -484,7 +486,7 @@
     "nx.draw(revealing)  # networkx draw()\n",
     "plt.draw()\n",
     "plt.show()\n",
-    "write_dot(bandit,'Graphs/revealing.dot')"
+    "# write_dot(revealing,'Graphs/revealing.dot')"
    ]
   },
   {
@@ -493,8 +495,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_itr = 20000\n",
-    "n_sim = 30\n",
+    "n_itr = 10000\n",
+    "n_sim = 100\n",
     "revealing_q, revealing_losses = EXP3Opt(revealing, list(revealing.nodes()), n_itr, n_sim, weak_dom={0})\n",
     "revealing_regret = compute_regret(revealing_losses, revealing)"
    ]
@@ -505,7 +507,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_regret(revealing, [revealing_regret, upper_bound(revealing, len(revealing_regret), delta=1)], ['EXP3', 'Upper bound'])"
+    "plot_regret(revealing,\n",
+    "            [revealing_regret, upper_bound(revealing, len(revealing_regret), delta=1)],\n",
+    "            ['EXP3', 'Upper bound'])"
    ]
   },
   {
@@ -523,7 +527,109 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_regret(revealing, [full_feedback_regret[:min_t], bandit_regret[:min_t], police_regret[:min_t], revealing_regret[:min_t]], ['Full feedback', 'Bandit', 'Police','Revealing'])"
+    "plot_regret(revealing,\n",
+    "            [full_feedback_regret[:min_t], bandit_regret[:min_t], police_regret[:min_t], revealing_regret[:min_t]],\n",
+    "            ['Full feedback', 'Bandit', 'Police','Revealing'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cycle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cycle = nx.DiGraph()\n",
+    "cycle.add_node(0, arm=arms.ArmBernoulli(0.5))\n",
+    "cycle.add_node(1, arm=arms.ArmBernoulli(0.3))\n",
+    "cycle.add_node(2, arm=arms.ArmBernoulli(0.4))\n",
+    "cycle.add_node(3, arm=arms.ArmBernoulli(0.7))\n",
+    "cycle.add_node(4, arm=arms.ArmBernoulli(0.1))\n",
+    "cycle.add_edge(0, 1)\n",
+    "cycle.add_edge(1, 2)\n",
+    "cycle.add_edge(2, 3)\n",
+    "cycle.add_edge(3, 4)\n",
+    "cycle.add_edge(4, 0)\n",
+    "print(\"This graph is {}\".format(obs_dict[obsGraph.observability_type(cycle)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nx.draw(cycle)  # networkx draw()\n",
+    "plt.draw()\n",
+    "plt.show()\n",
+    "#write_dot(cycle,'Graphs/cycle.dot')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_itr = 10000\n",
+    "n_sim = 100\n",
+    "cycle_q, cycle_losses = EXP3Opt(cycle, list(cycle.nodes()), n_itr, n_sim, weak_dom={0, 1, 2, 3, 4})\n",
+    "cycle_regret = compute_regret(cycle_losses, cycle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_regret(cycle, [cycle_regret, upper_bound(cycle, len(cycle_regret), delta=5)], ['EXP3', 'Upper bound'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_t = min(len(cycle_regret),\n",
+    "            min(min(len(revealing_regret),len(full_feedback_regret)), min(len(bandit_regret),len(police_regret))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_regret(revealing, [revealing_regret, bandit_regret], ['Revealing', 'Bandit'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Revealing and cycle\n",
+    "plot_regret(revealing, [revealing_regret[:min_t], cycle_regret[:min_t]], ['Revealing', 'Cycle'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_regret(revealing,\n",
+    "            [full_feedback_regret[:min_t], bandit_regret[:min_t], police_regret[:min_t], revealing_regret[:min_t], cycle_regret[:min_t]],\n",
+    "            ['Full feedback', 'Bandit', 'Police','Revealing', 'Cycle'])"
    ]
   },
   {
